v0.0.3
-Changed screen size to 960x540
-Animated level background


v0.0.2
-Added crouching
-Added difficulty levels and scaling enemy difficulty
-Added dev mode for hitbox detection and difficulty adjustments
-Split game.js into structured ES Modules under /src/ 


v0.0.1
-Initial release