@@ -1,1 +1,2 @@
 assets/.temp/
+assets/.design/
