@@ -16,4 +16,7 @@ export const crouchAnimSprite = new Image();
 crouchAnimSprite.src = 'assets/sprites/unruggabull-crouching.png';
 
 export const bgSprite = new Image();
-bgSprite.src = 'assets/sprites/level-rugco-alley-sprite-960x540.png'; 
+bgSprite.src = 'assets/sprites/level-rugco-alley-sprite-960x540.png';
+
+export const jumpingSprite = new Image();
+jumpingSprite.src = 'assets/sprites/unruggabull-jumping.png'; 
