@@ -1,6 +1,7 @@
 v0.0.3
 -Changed screen size to 960x540
 -Animated level background
+-Crouching now moves slower
 
 
 v0.0.2
